--- a/config.json
+++ b/config.json
@@ -1,50 +1,67 @@
-[
-    {
-        "name": "sancho",
-        "origin": "sancho.h.abilio.dk",
-        "endpoint": "http://push.abilio.dk/message",
-        "token": "ADRoC8IXdD3kZO1"
+{
+    "port": 2526,
+    "fallback": {
+        "endpoint": "http://health.abilio.dk/.........",
+        "method": "get"
     },
-    {
-        "name": "diogenes",
-        "origin": "diogenes.abilio.dk",
-        "endpoint": "http://push.abilio.dk/message",
-        "token": "AcC1E7gEi00wQjR"
-    },
-    {
-        "name": "harald",
-        "origin": "harald.h.abilio.dk",
-        "endpoint": "http://push.abilio.dk/message",
-        "token": "AGrtDDKV8n9GH5G"
-    },
-    {
-        "name": "hopper",
-        "origin": "hopper.h.abilio.dk",
-        "endpoint": "http://push.abilio.dk/message",
-        "token": "ARzmny.zxj9rqmX"
-    },
-    {
-        "name": "zetas",
-        "origin": "zzz.h.abilio.dk",
-        "endpoint": "http://push.abilio.dk/message",
-        "token": "AXaK2aA.MC1K6xk"
-    },
-    {
-        "name": "magallanes",
-        "origin": "magallanes.h.abilio.dk",
-        "endpoint": "http://push.abilio.dk/message",
-        "token": "AzgnB8XVWCPnaMH"
-    },
-    {
-        "name": "pihole",
-        "origin": "pihole.abilio.dk",
-        "endpoint": "http://push.abilio.dk/message",
-        "token": "Ajh9iipmoEhFxjt"
-    },
-    {
-        "name": "wozniak",
-        "origin": "wozniak.h.abilio.dk",
-        "endpoint": "http://push.abilio.dk/message",
-        "token": "ABIcbBY8LsW_obj"
-    }
-]
+    "handlers": [
+        {
+            "name": "gotify",
+            "endpoint": "http://push.abilio.dk/message",
+            "method": "post",
+            "fallbackToken": "__fallback_token__",
+            "template": {
+                "message": "{{body}}", 
+                "title": "{{from.host}}", 
+                "priority": 5, 
+                "extras": {
+                    "client::display": {
+                        "contentType": "text/markdown"
+                    }
+                }
+            },
+            "origins": [
+                {
+                    "name": "sancho",
+                    "origin": "sancho.h.abilio.dk",
+                    "token": "ADRoC8IXdD3kZO1"
+                },
+                {
+                    "name": "diogenes",
+                    "origin": "diogenes.abilio.dk",
+                    "token": "AcC1E7gEi00wQjR"
+                },
+                {
+                    "name": "harald",
+                    "origin": "harald.h.abilio.dk",
+                    "token": "AGrtDDKV8n9GH5G"
+                },
+                {
+                    "name": "hopper",
+                    "origin": "hopper.h.abilio.dk",
+                    "token": "ARzmny.zxj9rqmX"
+                },
+                {
+                    "name": "zetas",
+                    "origin": "zzz.h.abilio.dk",
+                    "token": "AXaK2aA.MC1K6xk"
+                },
+                {
+                    "name": "magallanes",
+                    "origin": "magallanes.h.abilio.dk",
+                    "token": "AzgnB8XVWCPnaMH"
+                },
+                {
+                    "name": "pihole",
+                    "origin": "pihole.abilio.dk",
+                    "token": "Ajh9iipmoEhFxjt"
+                },
+                {
+                    "name": "wozniak",
+                    "origin": "wozniak.h.abilio.dk",
+                    "token": "ABIcbBY8LsW_obj"
+                }
+            ]
+        }
+    ]
+}
